--- a/templates/user/edit_user_profile.html
+++ b/templates/user/edit_user_profile.html
@@ -7,7 +7,8 @@
             <div class="card" style="width: 100%">
                 <div class="card-body">
                     <h3 class="card-title">Edit Profil</h3>
-                    <form>
+                    <form method="POST">
+                        {% csrf_token %}
                         <div class="form-group">
                           <label for="nama-lengkap">Nama Lengkap</label>
                           <input type="text" name="nama-lengkap" class="form-control" id="nama-lengkap"/>
@@ -25,7 +26,7 @@
                         </div>
                         <div class="form-group">
                             <label for="kota">Kota</label>
-                            <input type="text" name="nama-lengkap" class="form-control" id="nama-lengkap"/>
+                            <input type="text" name="kota" class="form-control" id="kota"/>
                         </div>
                         <div class="form-group">
                             <label for="tentang-saya">Tentang Saya</label>
