--- a/templates/user/edit_user_profile.html
+++ b/templates/user/edit_user_profile.html
@@ -11,17 +11,17 @@
                         {% csrf_token %}
                         <div class="form-group">
                           <label for="nama-lengkap">Nama Lengkap</label>
-                          <input type="text" name="nama-lengkap" class="form-control" id="nama-lengkap"/>
+                          <input type="text" value = "{{nama_lengkap}}" name="nama-lengkap" class="form-control" id="nama-lengkap"/>
                         </div>
                         <div class="form-group">
                           <label for="tanggal-lahir">Tanggal Lahir</label>
-                          <input type="date" class="form-control" id="tanggal-lahir" name="tanggal-lahir"/>
+                          <input type="date" value="{{tanggal_lahir|date:'Y-m-d'}}" class="form-control" id="tanggal-lahir" name="tanggal-lahir"/>
                         </div>
                         <div class="form-group">
                             <label for="gender">Gender</label>
                             <select class="form-control" id="gender" name="gender">
-                                <option value="laki-laki">Laki-laki</option>
-                                <option value="perempuan">Perempuan</option>
+                                <option value="L">Laki-laki</option>
+                                <option value="P">Perempuan</option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -30,7 +30,7 @@
                         </div>
                         <div class="form-group">
                             <label for="tentang-saya">Tentang Saya</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
+                            <textarea class="form-control" name="tentang-saya" id="exampleFormControlTextarea1" rows="10"></textarea>
                         </div>    
                         <div class="form-group" style="text-align: right;">
                             <button type="submit" class="btn btn-primary">Simpan</button>
