--- a/templates/user/edit_user_profile.html
+++ b/templates/user/edit_user_profile.html
@@ -7,7 +7,7 @@
             <div class="card" style="width: 100%">
                 <div class="card-body">
                     <h3 class="card-title">Edit Profil</h3>
-                    <form method="POST">
+                    <form method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="form-group">
                           <label for="nama-lengkap">Nama Lengkap</label>
@@ -26,11 +26,17 @@
                         </div>
                         <div class="form-group">
                             <label for="kota">Kota</label>
-                            <input type="text" name="kota" class="form-control" id="kota"/>
+                            <input type="text" value="{{kota}}" name="kota" class="form-control" id="kota"/>
                         </div>
                         <div class="form-group">
                             <label for="tentang-saya">Tentang Saya</label>
-                            <textarea class="form-control" name="tentang-saya" id="exampleFormControlTextarea1" rows="10"></textarea>
+                            <textarea class="form-control" name="tentang-saya" id="exampleFormControlTextarea1" rows="10">
+                                {{tentang_saya}}
+                            </textarea>
+                        </div>
+                        <div class="form-group">
+                            <label for="profile-picture">Upload Foto Profil</label>
+                            <input type="file" name="profile-picture" id="profile-picture">
                         </div>    
                         <div class="form-group" style="text-align: right;">
                             <button type="submit" class="btn btn-primary">Simpan</button>
