order stories by date_posted descending

--- a/templates/user/edit_user_profile.html
+++ b/templates/user/edit_user_profile.html
@@ -43,6 +43,7 @@
                             </textarea>
                         </div>
                         <div class="form-group">
+                            <p>Foto Profil: {{profile_picture}}</p>
                             <label for="profile-picture">Upload Foto Profil</label>
                             <input type="file" name="profile-picture" id="profile-picture">
                         </div>    
