--- a/templates/user/user_profile.html
+++ b/templates/user/user_profile.html
@@ -36,20 +36,22 @@
                         </div>
                     </div>
                     <h4 class="card-title">Cerita</h4>
-                    <div class="story-box mb-3">
-                        <div class="score-box mr-2">
-                            <div class="points-number text-center mb-0">18</div>
-                            <div class="points-text text-center">Points</div>
+                    {% for story in stories %}
+                        <div class="story-box mb-3">
+                            <div class="score-box mr-2">
+                                <div class="points-number text-center mb-0">18</div>
+                                <div class="points-text text-center">Points</div>
+                            </div>
+                            <div class="info">
+                                <h5 class="mb-0"><a href="google.com">{{story.title}}</a></h5>
+                                <span class="text-story-info text font-weight-light">(3200 kata) by <a href="youtube.com">{{story.user.username}}</a> on {{story.date_posted}}</span>
+                                <span class="text-story-info text tags font-weight-light">Tags: <a href="twitter.com">Cerita</a> | <a href="twitter.com">Cerita Pendek</a> | <a href="twitter.com">Detektif</a>
+                                    | <a href="twitter.com">Cerita</a> | <a href="twitter.com">Cerita Pendek</a> | <a href="twitter.com">Detektif</a> 
+                                    | <a href="twitter.com">Cerita</a> | <a href="twitter.com">Cerita Pendek</a> | <a href="twitter.com">Detektif</a>
+                                </span>
+                            </div>
                         </div>
-                        <div class="info">
-                            <h5 class="mb-0"><a href="google.com">Halo-halo Bandung</a></h5>
-                            <span class="text-story-info text font-weight-light">(3200 kata) by <a href="youtube.com">Andika</a> on 2020-03-06</span>
-                            <span class="text-story-info text tags font-weight-light">Tags: <a href="twitter.com">Cerita</a> | <a href="twitter.com">Cerita Pendek</a> | <a href="twitter.com">Detektif</a>
-                                | <a href="twitter.com">Cerita</a> | <a href="twitter.com">Cerita Pendek</a> | <a href="twitter.com">Detektif</a> 
-                                | <a href="twitter.com">Cerita</a> | <a href="twitter.com">Cerita Pendek</a> | <a href="twitter.com">Detektif</a>
-                            </span>
-                        </div>
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
