--- a/templates/story/posting_story.html
+++ b/templates/story/posting_story.html
@@ -6,15 +6,24 @@
         <div class="row mt-5">
             <div class="card" style="width: 100%">
                 <div class="card-body">
-                    <h3 class="card-title">Posting Cerita</h3>
-                    <form>
+                    <h3 class="card-title">
+                      {% if page == "post_story" %}
+                        Posting Cerita
+                      {% else %}
+                        Edit Cerita
+                      {% endif %}
+                    </h3>
+                    <form method="POST">
+                        {% csrf_token %}
                         <div class="form-group">
-                          <!-- <label class="font-weight-bold" for="exampleFormControlInput1">Judul Cerita</label> -->
-                          <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Judul Cerita">
+                          <input type="text" value="{% if story %} {{story.title}}  {% endif %}" class="form-control" name="title" id="exampleFormControlInput1" placeholder="Judul Cerita">
                         </div>
                         <div class="form-group">
-                          <!-- <label for="exampleFormControlTextarea1">Example textar</label> -->
-                          <textarea class="form-control" id="exampleFormControlTextarea1" rows="50"></textarea>
+                          <textarea class="form-control" name="content" id="exampleFormControlTextarea1" rows="50">
+                            {% if story %} 
+                              {{story.content}}  
+                            {% endif %}
+                          </textarea>
                         </div>
                         <div class="form-group" style="text-align: right;">
                           <button type="submit" class="btn btn-primary">Submit</button>
@@ -27,5 +36,9 @@
 {% endblock %}
 
 {% block title %}
-	Posting Cerita
+  {% if page == "post_story" %}
+    Posting Cerita
+  {% else %}
+    Edit Cerita
+  {% endif %}
 {% endblock %}
