--- a/templates/story/stories.html
+++ b/templates/story/stories.html
@@ -39,7 +39,7 @@
                                 <div class="points-text text-center">Points</div>
                             </div>
                             <div class="info">
-                                <h5 class="mb-0"><a href="google.com">{{story.title}}</a></h5>
+                                <h5 class="mb-0"><a href="/stories/{{story.id}}">{{story.title}}</a></h5>
                                 <span class="text-story-info text font-weight-light">(3200 kata) by <a href="youtube.com">{{story.user.username}}</a> on {{story.date_posted}}</span>
                                 <span class="text-story-info text tags font-weight-light">Tags: <a href="twitter.com">Cerita</a> | <a href="twitter.com">Cerita Pendek</a> | <a href="twitter.com">Detektif</a>
                                     | <a href="twitter.com">Cerita</a> | <a href="twitter.com">Cerita Pendek</a> | <a href="twitter.com">Detektif</a> 
