--- a/templates/story/story.html
+++ b/templates/story/story.html
@@ -29,30 +29,34 @@
                     <div class="comments">
                         <h4 class="card-title">Komentar</h4>
                         {% if request.user.is_authenticated %}
-                            <form method="POST" class="comment-box">
-                                {% csrf_token %}
-                                <div class="form-skor form-group no-gutters">
-                                    <label class="item mr-1" for="exampleFormControlSelect1">Skor</label>
-                                    <select name="rating" class="item col-sm-1 form-control  form-control-sm" id="exampleFormControlSelect1">
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                    <option value="3">3</option>
-                                    <option value="4">4</option>
-                                    <option value="5">5</option>
-                                    <option value="6">6</option>
-                                    <option value="7">7</option>
-                                    <option value="8">8</option>
-                                    <option value="9">9</option>
-                                    <option value="10">10</option>
-                                    </select>
-                                </div>
-                                <div class="form-group no-gutters">
-                                    <textarea name="content" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                                </div>
-                                <div class="container-button-submit">
-                                    <button type="submit" class="btn btn-primary">Submit</button>
-                                </div>
-                            </form>
+                            {% if have_commented == "False" %}
+                                {% if request.user.id != story.user.id %}
+                                    <form method="POST" class="comment-box">
+                                        {% csrf_token %}
+                                        <div class="form-skor form-group no-gutters">
+                                            <label class="item mr-1" for="exampleFormControlSelect1">Skor</label>
+                                            <select name="rating" class="item col-sm-1 form-control  form-control-sm" id="exampleFormControlSelect1">
+                                            <option value="1">1</option>
+                                            <option value="2">2</option>
+                                            <option value="3">3</option>
+                                            <option value="4">4</option>
+                                            <option value="5">5</option>
+                                            <option value="6">6</option>
+                                            <option value="7">7</option>
+                                            <option value="8">8</option>
+                                            <option value="9">9</option>
+                                            <option value="10">10</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group no-gutters">
+                                            <textarea name="content" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                        </div>
+                                        <div class="container-button-submit">
+                                            <button type="submit" class="btn btn-primary">Submit</button>
+                                        </div>
+                                    </form>
+                                {% endif %}
+                            {% endif %}
                         {% endif %}
                         {% for comment in comments %}
                             <div class="ml-5 comment mb-2">
