calculate rating for each story

--- a/templates/story/stories.html
+++ b/templates/story/stories.html
@@ -35,7 +35,7 @@
                     {% for story in stories %}
                         <div class="story-box mb-3">
                             <div class="score-box mr-2">
-                                <div class="points-number text-center mb-0">18</div>
+                                <div class="points-number text-center mb-0">{{story.rating}}</div>
                                 <div class="points-text text-center">Points</div>
                             </div>
                             <div class="info">
