--- a/templates/story/story.html
+++ b/templates/story/story.html
@@ -10,6 +10,7 @@
                     <div class="story">
                         <div class="story-info mb-5">
                             <h3 class="card-title">{{story.title}}</h3>
+                            <p><b>Rating: {{story.rating}}</b></p>
                             <span class="text-story-info font-weight-light">(3200 kata) by <a href="youtube.com">{{story.user.username}}</a> on {{story.date_posted}}</span>
                             <span class="text-story-info tags font-weight-light">Tags: <a href="twitter.com">Cerita</a> | <a href="twitter.com">Cerita Pendek</a> | <a href="twitter.com">Detektif</a>
                                 <a href="twitter.com">Cerita</a> | <a href="twitter.com">Cerita Pendek</a> | <a href="twitter.com">Detektif</a> 
