--- a/templates/story/stories.html
+++ b/templates/story/stories.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %} 
+{% load story_tags %}
 {% block content %}
     {% include 'navbar.html' %}
     <div class="container">
@@ -33,20 +34,7 @@
                 <div class="card-body">
                     <h3 class="card-title">All Stories</h3>
                     {% for story in stories %}
-                        <div class="story-box mb-3">
-                            <div class="score-box mr-2">
-                                <div class="points-number text-center mb-0">{{story.rating}}</div>
-                                <div class="points-text text-center">Points</div>
-                            </div>
-                            <div class="info">
-                                <h5 class="mb-0"><a href="/stories/{{story.id}}">{{story.title}}</a></h5>
-                                <span class="text-story-info text font-weight-light">(3200 kata) by <a href="youtube.com">{{story.user.username}}</a> on {{story.date_posted}}</span>
-                                <span class="text-story-info text tags font-weight-light">Tags: <a href="twitter.com">Cerita</a> | <a href="twitter.com">Cerita Pendek</a> | <a href="twitter.com">Detektif</a>
-                                    | <a href="twitter.com">Cerita</a> | <a href="twitter.com">Cerita Pendek</a> | <a href="twitter.com">Detektif</a> 
-                                    | <a href="twitter.com">Cerita</a> | <a href="twitter.com">Cerita Pendek</a> | <a href="twitter.com">Detektif</a>
-                                </span>
-                            </div>
-                        </div>
+                        {{story|render_story_box}}
                     {% endfor %}
                 </div>
             </div>
