--- a/templates/user/profile_tab.html
+++ b/templates/user/profile_tab.html
@@ -3,10 +3,10 @@
        <div class="col-lg-6 mb-4">
             <ul class="nav nav-tabs card-header-tabs">
                 <li class="nav-item">
-                    <a class="nav-link {% if page == 'profil' %} active {% endif %}" aria-current="true" href="/user/123/profile">Profil</a>
+                    <a class="nav-link {% if page == 'profil' %} active {% endif %}" aria-current="true" href="/user/{{username}}/profile">Profil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link {% if page == 'notifikasi' %} active {% endif %}" href="/user/123/notifikasi">Notifikasi</a>
+                    <a class="nav-link {% if page == 'notifikasi' %} active {% endif %}" href="/user/{{username}}/notifikasi">Notifikasi</a>
                 </li>
             </ul>
        </div> 
